// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar handbookPages=false matches html snapshot 1`] = `
<div
  class="progressBar guide"
  data-project-loaded="true"
>
  <div
    class="moduleSelection"
  >
    <span
      class="moduleButton case"
    >
      <input
        disabled="disabled"
        id="caseRadio"
        name="module"
        style="display: none;"
        type="radio"
      />
       
      <label
        class="noSelect"
        for="caseRadio"
      >
        Case
      </label>
    </span>
     
    <span
      class="moduleButton guide"
    >
      <input
        id="guideRadio"
        name="module"
        style="display: none;"
        type="radio"
      />
       
      <label
        class="noSelect"
        for="guideRadio"
      >
        Handbook
      </label>
    </span>
  </div>
   
  <div
    class="sections"
  >
    <div
      class="section unlocked"
      style="color: rgb(252, 178, 89); border-left-color: #fcb259;"
    >
      <span>
        <span
          class="sectionName unlocked"
        >
          <span>
            sims
          </span>
        </span>
         
        <span
          class="pages"
          style="display: none;"
        >
          <div
            class="page"
            id="simIntro"
          >
            <router-link-stub
              ariacurrentvalue="page"
              class=""
              event="click"
              tag="a"
              to="/evolution_case_ap-v.1.0.0/pages/simIntro"
            >
              <span>
                simIntro
              </span>
            </router-link-stub>
          </div>
          <div
            class="page"
            id="sim1"
          >
            <span
              class="locked"
            >
              sim1
            </span>
          </div>
          <div
            class="page"
            id="sim2"
          >
            <span
              class="locked"
            >
              sim2
            </span>
          </div>
        </span>
         
        <span
          class="subsections"
        >
          <div
            style="color: rgb(249, 88, 88); border-left-color: #f95858;"
          >
            <span
              class="subsection open unlocked"
            >
              <span
                class="subsectionName unlocked"
              >
                <span>
                  subsection1
                </span>
              </span>
               
              <span
                class="pages"
                style="display: none;"
              >
                <div
                  class="page"
                  id="subSectionPage"
                >
                  <router-link-stub
                    ariacurrentvalue="page"
                    class="currentPage"
                    event="click"
                    tag="a"
                    to="/evolution_case_ap-v.1.0.0/pages/subSectionPage"
                  >
                    <span>
                      subSectionPage
                    </span>
                  </router-link-stub>
                </div>
              </span>
            </span>
          </div>
          <div
            style="color: rgb(127, 108, 108); border-left-color: #7f6c6c;"
          >
            <span
              class="subsection subsectionName locked"
            >
              subsection2
            </span>
          </div>
          <div
            style="color: rgb(127, 108, 108); border-left-color: #7f6c6c;"
          >
            <span
              class="subsection subsectionName locked"
            >
              subsection3
            </span>
          </div>
        </span>
      </span>
    </div>
    <div
      class="section"
      style="color: rgb(168, 167, 138); border-left-color: #a8a78a;"
    >
      <span
        class="sectionName locked"
      >
        Review
      </span>
    </div>
  </div>
   
  <div
    class="bottomButtons"
  >
    <span
      class="noSelect"
      id="glossaryButton"
    >
      Glossary
    </span>
     
    <span
      class="noSelect"
      id="muteButton"
    >
      Mute
    </span>
  </div>
</div>
`;

exports[`ProgressBar handbookPages=true matches html snapshot 1`] = `
<div
  class="progressBar guide"
  data-project-loaded="true"
>
  <div
    class="moduleSelection"
  >
    <span
      class="moduleButton case"
    >
      <input
        disabled="disabled"
        id="caseRadio"
        name="module"
        style="display: none;"
        type="radio"
      />
       
      <label
        class="noSelect"
        for="caseRadio"
      >
        Case
      </label>
    </span>
     
    <span
      class="moduleButton guide"
    >
      <input
        id="guideRadio"
        name="module"
        style="display: none;"
        type="radio"
      />
       
      <label
        class="noSelect"
        for="guideRadio"
      >
        Handbook
      </label>
    </span>
  </div>
   
  <div
    class="sections"
  >
    <div
      class="section unlocked handbookPages"
      style="color: rgb(252, 178, 89); border-left-color: #fcb259;"
    >
      <span>
        <span
          class="sectionName unlocked"
        >
          <span>
            sims
          </span>
        </span>
         
        <span
          class="pages"
        >
          <div
            class="page"
            id="simIntro"
          >
            <router-link-stub
              ariacurrentvalue="page"
              class=""
              event="click"
              tag="a"
              to="/evolution_case_ap-v.1.0.0/pages/simIntro"
            >
              <span>
                simIntro
              </span>
            </router-link-stub>
          </div>
          <div
            class="page"
            id="sim1"
          >
            <span
              class="locked"
            >
              sim1
            </span>
          </div>
          <div
            class="page"
            id="sim2"
          >
            <span
              class="locked"
            >
              sim2
            </span>
          </div>
        </span>
         
        <span
          class="subsections"
        >
          <div
            style="color: rgb(249, 88, 88); border-left-color: #f95858;"
          >
            <span
              class="subsection unlocked"
            >
              <span
                class="subsectionName unlocked"
              >
                <span>
                  subsection1
                </span>
              </span>
               
              <span
                class="pages"
              >
                <div
                  class="page"
                  id="subSectionPage"
                >
                  <router-link-stub
                    ariacurrentvalue="page"
                    class="currentPage"
                    event="click"
                    tag="a"
                    to="/evolution_case_ap-v.1.0.0/pages/subSectionPage"
                  >
                    <span>
                      subSectionPage
                    </span>
                  </router-link-stub>
                </div>
              </span>
            </span>
          </div>
          <div
            style="color: rgb(127, 108, 108); border-left-color: #7f6c6c;"
          >
            <span
              class="subsection subsectionName locked"
            >
              subsection2
            </span>
          </div>
          <div
            style="color: rgb(127, 108, 108); border-left-color: #7f6c6c;"
          >
            <span
              class="subsection subsectionName locked"
            >
              subsection3
            </span>
          </div>
        </span>
      </span>
    </div>
    <div
      class="section handbookPages"
      style="color: rgb(168, 167, 138); border-left-color: #a8a78a;"
    >
      <span
        class="sectionName locked"
      >
        Review
      </span>
    </div>
  </div>
   
  <div
    class="bottomButtons"
  >
    <span
      class="noSelect"
      id="glossaryButton"
    >
      Glossary
    </span>
     
    <span
      class="noSelect"
      id="muteButton"
    >
      Mute
    </span>
  </div>
</div>
`;
